<resources>
    <string name="app_name">幼教园丁</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="score">积分</string>
    <string name="withdraw">提现</string>
    <string name="payment">缴费</string>
    <string name="principal">园长</string>
    <string name="upload">照片发布</string>
    <string name="go_class">我要上课</string>
    <string name="parents_job">家长作业</string>
    <string name="notify_parent">通知家长</string>
    <string name="forget_password_t">忘记密码</string>
    <string name="come_on_baby">宝贝加油</string>
    <string name="call_name">我要点名</string>
    <string name="calss_rings">班级圈</string>
    <string name="school_news">学校新闻</string>
    <string name="bczp">保存成功</string>
    <string name="dialog_yes_button">确定</string>
    <string name="inschool_alter">修改</string>
    <string name="bcsb">保存失败</string>
    <string name="news">私信</string>
    <string name="dqwlhjbs">当前网络环境不是wifi,不能上传照片,如需更改请到设置中更改</string>
    <string name="growth_profile">成长足迹</string>
    <string name="save_photos">保存照片</string>
    <string name="finish_session">\n完成课时</string>
    <string name="homework">作业</string>
    <string name="photos">\n已发照片</string>
    <string name="collection">\n已被珍藏</string>
    <string name="tell_somethin">输入您的名字</string>
    <string name="edit_number">还可以输入500字</string>
    <string name="send">发布</string>
    <string name="can_write">还可以输入200字</string>
    <string name="name">姓名</string>
    <string name="notify">通知</string>
    <string name="release">发布</string>
    <string name="setting">设置</string>
    <string name="All_the_kids_parents_will_receive_information_after_15_minutes">所有的小朋友家长会在15分钟后收到信息哦!</string>
    <string name="create_class">创建班级</string>
    <string name="tcbj">退出班级</string>
    <string name="please_write_homewrok">请输入作业</string>
    <string name="me">我</string>
    <string name="head_portrait">头像</string>
    <string name="name_must">姓名(必填)</string>
    <string name="sex">性别</string>
    <string name="area">地区</string>
    <string name="sure">确定</string>
    <string name="boy">男</string>
    <string name="gril">女</string>
    <string name="take_photos">拍照</string>
    <string name="choose_photos">从手机相册选择</string>
    <string name="cancle">取消</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="saving_image">保存照片</string>
    <string name="preparing_card">准备卡</string>
    <string name="no_storage_card">没有储存卡</string>
    <string name="not_enough_space">没有足够的空间</string>
    <string name="Tip_principal">园长提示</string>
    <string name="Please_select_create_a_class_teacher">没有班级?快选择班级加入吧</string>
    <string name="Please_select_other_teachers_to_join_class">2.请其它的老师选择加入班级</string>
    <string name="Please_each_class_teacher_with_the_kindergarten_management">3.请各班老师配合幼儿园管理</string>
    <string name="Please_click_here_to_create_but_it_did_make_the_teacher">请班主作老师点击这里创建</string>
    <string name="Please_click_here_to_join_the_class_other_teachers">请班级其它老师点击这里加入</string>
    <string name="jions_class">加入班级</string>
    <string name="new_class">新加班级</string>
    <string name="listfooterview_normal">查看更多</string>
    <string name="listfooterview_ready">松开载入更多</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="scan">二维码扫描</string>
    <string name="send_notify">发布通知</string>
    <string name="take_homework">布置作业</string>
    <string name="kindergarten">选择幼儿园</string>
    <string name="class_name">班级名称</string>
    <string name="kendergarten_name">如深圳小星星幼儿园，最多20个字</string>
    <string name="class_name_edit">如小星星班，最多20个字</string>
    <string name="class_info">班级主页</string>
    <string name="change_password">更换密码</string>
    <string name="notify_class">打印家\n长通知</string>
    <string name="remove">解除绑定</string>
    <string name="bandinghezi">绑定盒子</string>
    <string name="haimeiyoubandinghezi">还没有绑定盒子</string>
    <string name="remove_teacher">老师</string>
    <string name="delete_teacher"> 删除需要联系客服</string>
    <string name="baby">宝贝</string>
    <string name="near_box_go_to_class">靠近宝盒开始上课</string>
    <string name="xiao_tie_shi">小贴士：</string>
    <string name="session_class">用课程表上课，达到最好的教学效果</string>
    <string name="zhi_kan_jiao_an_bei_ke">只看教案备课</string>
    <string name="no_user_camcre">相机不能用，请检查设备</string>
    <string name="max_photos">最多选择9张照片</string>
    <string name="get_fail_photos">获取图片失败</string>
    <string name="finish">完成</string>
    <string name="choose_camera">选择相册</string>
    <string name="camera_init">相册初始化中</string>
    <string name="save_something">说点什么吧</string>
    <string name="pelease_add_content_or_img">请添加内容</string>
    <string name="teaching_plans">教学计划</string>
    <string name="choose_scan_for_photo">从相册获取</string>
    <string name="call_name_detail">点名册</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="regeri">注册</string>
    <string name="monday">周一</string>
    <string name="senday">周二</string>
    <string name="thrday">周三</string>
    <string name="fday">周四</string>
    <string name="fiday">周五</string>
    <string name="sday">周六</string>
    <string name="se">周日</string>
    <string name="session_plans">课程表</string>
    <string name="session_db">课程库</string>
    <string name="open">展开</string>
    <string name="close">收起</string>
    <string name="send_message">发私信</string>
    <string name="peolpe">收件人</string>
    <string name="all_people">所有联系人</string>
    <string name="send_message_btn">发送</string>
    <string name="teacher">老师</string>
    <string name="box_number">宝盒编号：</string>
    <string name="chuqinglv">\n出勤率</string>
    <string name="username">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="class_code">请输入邀请码</string>
    <string name="oldpassword">请输入旧密码</string>
    <string name="newpassword">请输入新密码</string>
    <string name="new2password">请再输入新密码</string>
    <string name="core">验证码</string>
    <string name="detail">详情</string>
    <string name="exit">再按一下退出</string>
    <string name="please_write_baby_name">请输入宝贝姓名</string>
    <string name="new_baby">新加宝贝</string>
    <string name="baby_detail">宝贝详情</string>
    <string name="baby_praent_no_in_class">小朋友的家长还没有加入到班级中来哟，邀请他们扫码加入吧</string>
    <string name="lianxiren">联系人</string>
    <string name="changan_detail">(*长按可将联系人从班级删除)</string>
    <string name="anknow">未知</string>
    <string name="teacher_detail">老师详情</string>
    <string name="call">打电话</string>
    <string name="edit_name">修改名字</string>
    <string name="delete_baby">删除宝贝</string>
    <string name="zan">赞</string>
    <string name="comment">评论</string>
    <string name="yanzhengma">获取验证码</string>
    <string name="see_plans">查看计划表</string>
    <string name="class_plans">课程计划表</string>
    <string name="zhuke">主课</string>
    <string name="weike">微课</string>
    <string name="ziyuan">资源</string>
    <string name="please_input_baby_name">还没有输入宝贝名字哦</string>
    <string name="sao_yi_sao">扫一扫</string>
    <string name="tellphone">订购电话</string>
    <string name="box_advice">1.宝盒插电源后,用HDMI线与电视连接</string>
    <string name="box_advice_two">2.扫描电视屏幕上的二维码，绑定宝盒</string>
    <string name="wifi_on">仅在WIFI网络下上传照片</string>
    <string name="clear_data">清除缓存</string>
    <string name="check">检查更新</string>
    <string name="serice">服务协议</string>
    <string name="about">关于</string>
    <string name="quanwen">全文</string>
    <string name="zhedie">折叠</string>
    <string name="set_number">设置安全号码</string>
    <string name="change_number">更换手机号码</string>
    <string name="exit_bt">退出</string>
    <string name="version">当前版本</string>
    <string name="can_not_find_version_name">没有获取到版本号</string>
    <string name="sure_clear_data">确认清理缓存吗?</string>
    <string name="right_tellphone">请输入正确的手机号码</string>
    <string name="kiway">开维教育</string>
    <string name="new_version">有新的版本，是否更新?</string>
    <string name="new_versione">有新的版本更新</string>
    <string name="zhuce">注册</string>
    <string name="sure_exit">确定退出么?</string>
    <string name="pull_to_refresh_release_label">松开加载</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_pull_label">按住滑动</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="teacher_gold">教学目标</string>
    <string name="teacher_really">教学准备</string>
    <string name="no_data">如需备课，请登录幼教平台后台管理进行选课</string>
    <string name="good_teacher_shuode_konw">好老师应该知道</string>
    <string name="see_golde">查看教案</string>
    <string name="ses_mubiao">查看目标</string>
    <string name="first_video">已经是第一个视频了</string>
    <string name="last_video">这是最后一个视频了</string>
    <string name="resume">继续</string>
    <string name="video">控制电视声音的大小</string>
    <string name="exit_session">确定退出上课</string>
    <string name="exit_this_session">确定退出本节课 </string>
    <string name="no_network">网络繁忙,请稍后再试</string>
    <string name="really">准备中,请稍后…</string>
    <string name="my">我的</string>
    <string name="mian">首页</string>
    <string name="shcool_home">家校</string>
    <string name="weisheng">卫生</string>
    <string name="liyi">礼仪</string>
    <string name="yongcan">用餐</string>
    <string name="jilv">纪律</string>
    <string name="fayan">发言</string>
    <string name="kaoqing">考勤</string>
    <string name="youxiu">优秀</string>
    <string name="bucuo">不错</string>
    <string name="xunuli">需努力</string>
    <string name="weipingjia">未评价的学生，默认评价为：表现不错</string>
    <string name="banjierweima">班级二维码</string>
    <string name="use_yjpt">使用幼教平台扫描上方的二维码加入班级</string>
    <string name="zhijiazhangdeyifengx">致家长的一封信</string>
    <string name="emial_content">组织家长扫描《致家长一封信》中的二维码，是帮助家长下载幼教平台并加入班级的重要方法，信的内容我们已经为您准备好。</string>
    <string name="yulanxin">预览信的内容</string>
    <string name="jiexialai">接下来,您只需要</string>
    <string name="use_eimal">1.使用QQ邮箱接收</string>
    <string name="enter_your_QQ_emial">输入您的邮箱</string>
    <string name="xitong">系统会将《致家长一封信》发送到您的QQ邮箱,请接收并下载</string>
    <string name="dayinbingfajiazhang">2.打印并发送给家长</string>
    <string name="jiangzhijaizhang">将《致家长的一封信》打印好，可以在开家长会，家长早晚接送孩子时发送给家长</string>
    <string name="mingquejiazhang">3.明确家长扫码</string>
    <string name="mingquesao">明确告知家长扫描信中的二维码下载幼教平台,并加入班级</string>
    <string name="zhijiazhang">致家长的一封信</string>
    <string name="cuowu">错误次数太多，请输入验证码</string>
    <string name="yanzhengc">验证码错误</string>
    <string name="meishenhe">你还没通过审核，请耐心等候</string>
    <string name="tijiaposhenghe">已经提交到后台审核，审核后才能登陆，请耐心等候</string>
    <string name="quedingjieb">确定解绑当前盒子么</string>
    <string name="qingshuru">请输入正确的邮箱</string>
    <string name="fasongchengg">发送成功</string>
    <string name="fasongshibai">发送失败</string>
    <string name="qingsryz">请输入验证码</string>
    <string name="ghyzm">更换验证码</string>
    <string name="xgcg">修改成功</string>
    <string name="dad">爸爸</string>
    <string name="mun">妈妈</string>
    <string name="qin">亲戚</string>
    <string name="qxgz">取消关注成功</string>
    <string name="bjmzyjbcj">班级名字已经被创建，请更换班级名字</string>
    <string name="mysrbj">班级名字不能为空</string>
    <string name="qsrgjz">请输入关键字</string>
    <string name="myppdlxr">没有匹配的联系人</string>
    <string name="wwbdbh">为我绑定宝盒</string>
    <string name="dqsjmylrhlwqljhlwl">当前手机连接没有互联网，请连接互联网络</string>
    <string name="reply">回复</string>
    <string name="jtyjtjl">修改</string>
    <string name="fasongwifi">绑定Wifi网络</string>
    <string name="wifiname">Wifi名字</string>
    <string name="wifips">Wifi密码</string>
    <string name="wifity">加密类型</string>
    <string name="send_wifi">绑定wifi</string>
    <string name="no_send_wifi">不绑定wifi</string>
    <string name="bztx">不再提醒?</string>
    <string name="qsrwmm">请输入wifi密码</string>
</resources>