<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:gravity="center"
        android:text="@string/Tip_principal"
        android:textColor="@color/_333333"
        android:textSize="@dimen/_20sp" />

    <TextView
        android:id="@+id/create_class_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_10dp"
        android:text="@string/Please_select_create_a_class_teacher"
        android:textColor="@color/_333333"
        android:textSize="@dimen/_14sp" />

    <TextView
        android:id="@+id/create_class_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10dp"
        android:text="@string/Please_select_other_teachers_to_join_class"
        android:textColor="@color/_333333"
        android:textSize="@dimen/_16sp"
        android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10dp"
        android:text="@string/Please_each_class_teacher_with_the_kindergarten_management"
        android:textColor="@color/_333333"
        android:textSize="@dimen/_16sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/create_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/chengse_val"
        android:padding="@dimen/_10dp"
        android:text="@string/create_class"
        android:textColor="@color/_ffffff"
        android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10dp"
        android:text="@string/Please_click_here_to_create_but_it_did_make_the_teacher"
        android:textColor="@color/_333333"
        android:textSize="@dimen/_16sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/joins_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/chengse_val"
        android:padding="@dimen/_10dp"
        android:text="@string/jions_class"
        android:textColor="@color/_ffffff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10dp"
        android:text="@string/Please_click_here_to_join_the_class_other_teachers"
        android:textColor="@color/_333333"
        android:textSize="@dimen/_16sp"
        android:visibility="gone" />

</LinearLayout>