<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_f7f7f7"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/pingjia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_7dp"
        android:singleLine="true"
        android:text="@string/weipingjia"
        android:textColor="@color/_00cc99"
        android:textSize="@dimen/_14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1px"
        android:background="@color/_00cc99" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/_80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_7dp"
            android:text="@string/name"
            android:textColor="@color/_00cc99"
            android:textSize="@dimen/_14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/_1px"
            android:layout_height="match_parent"
            android:background="@color/_00cc99" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_7dp"
            android:text="@string/youxiu"
            android:textColor="@color/_00cc99"
            android:textSize="@dimen/_14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/_1px"
            android:layout_height="match_parent"
            android:background="@color/_00cc99" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_7dp"
            android:text="@string/bucuo"
            android:textColor="@color/_00cc99"
            android:textSize="@dimen/_14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/_1px"
            android:layout_height="match_parent"
            android:background="@color/_00cc99" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_7dp"
            android:text="@string/xunuli"
            android:textColor="@color/_00cc99"
            android:textSize="@dimen/_14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1px"
        android:background="@color/_00cc99" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:fastScrollEnabled="false"
        android:scrollbars="none" >
    </ListView>

    <include
        android:id="@+id/no_data"
        layout="@layout/no_data"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1px"
        android:background="@color/_e5e5e5" />

    <LinearLayout
        android:id="@+id/fglayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector_bg"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/add"
            android:drawablePadding="@dimen/_5dp"
            android:padding="@dimen/_10dp"
            android:text="@string/jtyjtjl"
            android:textColor="@color/_333333"
            android:textSize="@dimen/_14sp" />
    </LinearLayout>

</LinearLayout>